# fedora-sources-statistics

./: Containerfile  README.md  check-lookaside.py  crawl-sources.py  download-source-files.py  setup.cfg  stats.py
rpm-specs/: dummy-test-package-gloster.spec  python-pyABF.spec  rust-fixed.spec  rust-hashbrown.spec  rust-pyo3-ffi.spec  rust-pyo3-macros-backend.spec  rust-quick-junit.spec  rust-sctk-adwaita.spec  rust-termbg.spec  rust-tower-http.spec  rust-tower.spec  rust-tree-sitter-tags.spec  xorg-x11-xdm.spec
sources/: sources.0ad  sources.0ad-data  sources.0install  sources.0xFFFF  sources.2048-cli  sources.2ping  sources.389-ds-base  sources.3dprinter-udev-rules  sources.3mux  sources.3proxy  sources.4Pane  sources.4diac-forte  sources.4th  sources.4ti2  sources.64tass  sources.6tunnel  sources.8088_bios  sources.90-Second-Portraits  sources.9wm  sources.AGReader  sources.AMF  sources.APLpy  sources.ATpy  sources.AcetoneISO  sources.Add64  sources.Agda  sources.Agda-stdlib  sources.AllegroOGG  sources.ArpON  sources.AtomicParsley  sources.AusweisApp2  sources.BackupPC  sources.BackupPC-XS  sources.BareBonesBrowserLaunch  sources.BibTool  sources.BlockOutII  sources.Box2D  sources.CCfits  sources.CFR  sources.CGAL  (+19392 more)
