SHA512 (opam-full-2.2.1.tar.gz) = 4d7cd4755ba658e0ef4a119dd9d014a610fb909a73a111f922467a309c9599f86aec6b07295fc8335910b00b94ba22d329d9363fae987ab0cc4ec89e58bbaa43
SHA512 (opam-full-2.2.1.tar.gz.sig) = b86bcd8d38427eb2e196b8c7e0c30e5ed58b9bb7a39f952599f14e3b3fc7772816fc990bb16761fd0d531c74607e50f4ff16a620c048e15f0f29bdcdd8ff45b1
